--- a/Home-Page.html
+++ b/Home-Page.html
@@ -1,1 +1,10 @@
-hi
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+</head>
+<body>
+    <a href="AboutUs-Page.html">Go To About Us</a>
+</body>
+</html>
